--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ button, .callToAction {
     background-color: #3882f6;
 }
 
+button {
+    border-radius: 4px;
+    border: none;
+}
+
 .quote {
     background-color: #e5e7eb;
 }
