--- a/style.css
+++ b/style.css
@@ -8,10 +8,12 @@ ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    align-items: center;
 }
 
 .header {
-
+    display: flex;
 }
 
 .header, .hero, .footer {
