--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     display: flex;
     flex-direction: column;
+
 }
 
 ul {
@@ -20,6 +21,8 @@ ul {
 .header, .hero, .footer {
     background-color: #1f2937;
     color: #F9FAF8;
+    padding-left: 160px;
+    padding-right: 160px;
 }
 
 button, .callToAction {
