--- a/style.css
+++ b/style.css
@@ -9,13 +9,19 @@ ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    font-size: 12px;
     display: flex;
     align-items: center;
+    gap: 16px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
+}
+
+.header h2 {
+    font-size: 20px;
 }
 
 .header, .hero, .footer {
