--- a/style.css
+++ b/style.css
@@ -17,9 +17,6 @@ ul {
 
 .hero {
     display: flex;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .header {
@@ -34,8 +31,8 @@ ul {
 .header, .hero, .footer {
     background-color: #1f2937;
     color: #F9FAF8;
-    padding-left: 160px;
-    padding-right: 160px;
+    padding-left: 120px;
+    padding-right: 120px;
 }
 
 button, .action {
@@ -63,9 +60,14 @@ button {
 }
 
 .placeholder {
+    display: flex;
+    align-items: center;    
+    justify-content: center;
+}
+
+.placeholder div {
     height: 100px;
-    width: 200px;
-    background-color: grey;
-    flex-shrink: 0;
+    width: 300px;
+    background-color: red;
     max-width: 100%;
 }
