--- a/style.css
+++ b/style.css
@@ -48,15 +48,15 @@ button {
     background-color: #e5e7eb;
 }
 
-.hero h2 {
-    color: #F9FAF8;
-    font-size: 48px;
-    font-weight: bold;
-}
-
 .hero p {
     font-size: 18px;
     color: #e5e7eb;
+}
+
+.hero .main {
+    color: #F9FAF8;
+    font-size: 38px;
+    font-weight: 600;
 }
 
 .placeholder {
@@ -66,7 +66,7 @@ button {
 }
 
 .placeholder div {
-    height: 100px;
+    height: 150px;
     width: 300px;
     background-color: red;
     max-width: 100%;
