--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@ button, .action {
 button {
     border-radius: 4px;
     border: none;
+    color: white;
+    font-size: 12px;
+    padding: 
 }
 
 .quote {
