adjusted padding on button to get sizing just how i wanted it

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ button {
     border: none;
     color: white;
     font-size: 12px;
-    padding: 
+    padding: 4px 20px 4px 20px;
 }
 
 .quote {
