added max width 100px to card div so text would exceed the cards width

--- a/style.css
+++ b/style.css
@@ -95,6 +95,12 @@ button {
 
 .cards {
     display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card {
+    max-width: 100px;
 }
 
 .card .box{
