--- a/style.css
+++ b/style.css
@@ -86,11 +86,13 @@ button {
 }
 
 .information {
+    font-size: 24px;
+    font-weight: 600;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 32px 120px 40px 120px;
+    margin: 32px 120px 32px 120px;
 }
 
 .cards {
