--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ button {
     align-items: center;
     justify-content: center;
     margin-bottom: 72px;
+    gap: 36px;
 }
 
 .card {
@@ -115,4 +116,5 @@ button {
 
 .text {
     font-size: 12px;
+    text-align: center;
 }
