--- a/style.css
+++ b/style.css
@@ -58,6 +58,21 @@ button {
 
 .quote {
     background-color: #e5e7eb;
+    font-family: Optima, sans-serif;
+    font-style: italic;
+    font-size: 24px;
+    padding: 60px 240px 40px 240px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.quoteBy {
+    align-self: flex-end;
+    padding-right: 32px;
+    font-size: 16px;
+    font-style: normal;
 }
 
 .hero p {
