--- a/style.css
+++ b/style.css
@@ -137,6 +137,9 @@ button {
     border-radius: 8px;
     height: 100px;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .whiteBorderButton {
@@ -155,13 +158,17 @@ button {
 
 .container {
     display: flex;
+    align-items: center;
 }
 
 .left-side {
     margin: 0;
     padding: 24px;
+    align-items: center;
+}
+
+.right-side {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0;
+    align-items: center;
+    justify-content: center;
 }
