--- a/style.css
+++ b/style.css
@@ -157,11 +157,12 @@ button {
 
 .container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
     margin-left: 72px;
 }
 
 .right-side {
+    margin-left: 92px;
 
 }
