--- a/style.css
+++ b/style.css
@@ -157,12 +157,20 @@ button {
 
 .container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     margin-left: 72px;
 }
 
 .right-side {
     margin-left: 92px;
+    flex-shrink: 0;
 
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px;
+    font-size: 12px;
 }
